<resources>
    <string name="app_name">SmartFileExplorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="copy_items">Copy</string>
    <string name="move_items">Move</string>
    <string name="delete_items">Delete</string>
    <string name="create_new">Create Folder</string>
    <string name="rename">Rename</string>
    <string name="select_all">Select All</string>
    <string name="paste_items">Paste</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
